# clippy

./: .gitignore  Dockerfile  HTML_parser.py  README-pt.md  README.md  TODO  cache.py  cache_handler.py  clippy.icns  clippy.spec  config.py  file_handler.py  file_version_info.txt  get_URL.py  get_html.py  get_login.py  main.py  pandas_parseUC.py  parse.py  print_progress.py  pyproject.toml  testUC.html
clippy/: config.py  main.py
handlers/: HTML_parser.py  cache_handler.py  check_updates.py  creds_handler.py  exit_handler.py  file_handler.py  get_URL.py  get_html.py  get_login.py  print_handler.py
modules/: CatCount.py  ClipFile.py  Course.py  CourseList.py  EmptyHTMLException.py  FilesList.py  Folder.py  LoginError.py
nova_clippy/: __main__.py  config.py  file_handler.py  get_html.py  get_login.py  main.py
nova_clippy/handlers/: HTML_parser.py  cache_handler.py  file_handler.py  get_URL.py  get_html.py  get_login.py
nova_clippy/modules/: CatCount.py  ClipFile.py  Course.py  CourseList.py  LoginError.py
src/clippy/: __main__.py  config.py  main.py
src/handlers/: HTML_parser.py  creds_handler.py  exit_handler.py  file_handler.py
src/modules/: CatCount.py  ClipFile.py  Course.py  EmptyHTMLException.py  FilesList.py  LoginError.py
