[tool.poetry]
name = "clippy"
version = "1.0.1"
description = "A simple web scraper and downloader for FCT-NOVA's internal e-learning platform, CLIP."
authors = ["abtsousa <11749310+abtsousa@users.noreply.github.com>"]
license = "GPL-3.0-only"
readme = "README.md"

packages = [
    { include = "./modules/" },
    { include = "./handlers/" },
    { include = "clippy"}
]

[tool.poetry.scripts]
clippy = "clippy.main:app"

[tool.poetry.dependencies]
# python
python = "^3.8"
# global
typer = {extras = ["all"], version = "^0.9.0"}
inquirerpy = "^0.3.4"
requests = "^2.31.0"
appdirs = "^1.4.4"
bs4 = "^0.0.1"
tqdm = "^4.66.3"
keyring = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
