[project]
name = "clippy"
version = "1.0.1"
requires-python = ">=3.8"
description = "A simple web scraper and downloader for FCT-NOVA's internal e-learning platform, CLIP."
readme = "README.md"
authors = [{name = "abtsousa", email = "11749310+abtsousa@users.noreply.github.com"}]
license = "gpl-3.0-only"
dependencies = [
    "appdirs>=1.4.4",
    "bs4>=0.0.1",
    "inquirerpy>=0.3.4",
    "keyring>=24.2.0",
    "requests>=2.32.0",
    "tqdm>=4.66.3",
    "typer>=0.9.0",
]

[project.scripts]
clippy = "clippy.main:app"

[tool.uv]
dev-dependencies = [ ]
